--- a/style.css
+++ b/style.css
@@ -2474,7 +2474,7 @@ p{
 
 /* Ensure button is responsive */
 .btn-wrapper {
-    text-align: left;
+    text-align: center;
     margin-top: 20px;
 }
 
