--- a/style.css
+++ b/style.css
@@ -2474,13 +2474,15 @@ p{
 
 /* Ensure button is responsive */
 .btn-wrapper {
-    text-align: center;
     margin-top: 20px;
+    align-items: center;
+    font-size: 20px;
+    text-align: center;
 }
 
 .btn-primary {
     padding: 10px 20px;
-    font-size: 1em;
+    font-size: 20px;
 }
 
 
